// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`platform/azure/helpers getRenovatePRFormat should be formated (closed v2) 1`] = `
Object {
  "body": undefined,
  "createdAt": undefined,
  "displayNumber": "Pull Request #undefined",
  "number": undefined,
  "sourceBranch": undefined,
  "sourceRefName": undefined,
  "state": "merged",
  "status": 3,
  "targetBranch": undefined,
}
`;

exports[`platform/azure/helpers getRenovatePRFormat should be formated (closed) 1`] = `
Object {
  "body": undefined,
  "createdAt": undefined,
  "displayNumber": "Pull Request #undefined",
  "number": undefined,
  "sourceBranch": undefined,
  "sourceRefName": undefined,
  "state": "closed",
  "status": 2,
  "targetBranch": undefined,
}
`;

exports[`platform/azure/helpers getRenovatePRFormat should be formated (isConflicted) 1`] = `
Object {
  "body": undefined,
  "createdAt": undefined,
  "displayNumber": "Pull Request #undefined",
  "isConflicted": true,
  "mergeStatus": 2,
  "number": undefined,
  "sourceBranch": undefined,
  "sourceRefName": undefined,
  "state": "open",
  "targetBranch": undefined,
}
`;

exports[`platform/azure/helpers getRenovatePRFormat should be formated (not closed) 1`] = `
Object {
  "body": undefined,
  "createdAt": undefined,
  "displayNumber": "Pull Request #undefined",
  "number": undefined,
  "sourceBranch": undefined,
  "sourceRefName": undefined,
  "state": "open",
  "status": 1,
  "targetBranch": undefined,
}
`;
